
* Added `session$resetBrush(brushId)` (R) and `Shiny.resetBrush(brushId)` (JS)
  to programatically clear brushes from `imageOutput`/`plotOutput`.

* Fixed #1253: Memory could leak when an observer was destroyed without first
  being invalidated.

* Fixed #1144: updateRadioButton and updateCheckboxGroupInput break controls
  when used in modules (thanks, @sipemu!).

shiny 0.13.2
--------------------------------------------------------------------------------

* Updated documentation for `htmlTemplate`.

shiny 0.13.1
--------------------------------------------------------------------------------

* `flexCol` did not work on RStudio for Windows or Linux.

* Fixed RStudio debugger integration.

* BREAKING CHANGE: The long-deprecated ability to pass functions (rather than
  expressions) to reactive() and observe() has finally been removed.

shiny 0.13.0
--------------------------------------------------------------------------------

* Fixed #962: plot interactions did not work with the development version of
  ggplot2 (after ggplot2 1.0.1).

* Fixed #902: the `drag_drop` plugin of the selectize input did not work.

* Fixed #933: `updateSliderInput()` does not work when only the label is
  updated.

* Multiple imageOutput/plotOutput calls can now share the same brush id. Shiny
  will ensure that performing a brush operation will clear any other brush with
  the same id.

* Added `placeholder` option to `textInput`.

* Improved support for Unicode characters on Windows (#968).

* Fixed bug in `selectInput` and `selectizeInput` where values with double
  quotes were not properly escaped.

* `runApp()` can now take a path to any .R file that yields a `shinyApp` object;
  previously, the path had to be a directory that contained an app.R file (or
  server.R if using separately defined server and UI). Similarly, introduced
  `shinyAppFile()` function which creates a `shinyApp` object for an .R file
  path, just as `shinyAppDir()` does for a directory path.
